--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Salário</title>
+    <title>Calculadora de Salário Responsiva</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #f4f4f9; color: #333; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px 0; }
         .container { background-color: #fff; padding: 25px 40px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 100%; max-width: 600px; box-sizing: border-box; }
@@ -29,9 +29,8 @@
             .container { padding: 20px 25px; border-radius: 0; min-height: 100vh; }
             h1 { font-size: 24px; }
             .input-grid { grid-template-columns: 1fr; } /* Muda para 1 coluna */
-            .result-line, .detail-line { flex-direction: column; align-items: flex-start; }
-            .value-block { text-align: left; width: 100%;}
-            .formula { text-align: left; }
+            .detail-line { flex-direction: column; align-items: flex-start; }
+            .value-block { text-align: right; width: 100%; margin-top: 5px;} /* <<-- MUDANÇA AQUI */
             .result-line span:last-child { align-self: flex-end; font-size: 18px; }
             .result-final span:last-child { font-size: 26px; }
         }
@@ -40,7 +39,7 @@
 <body>
 
 <div class="container">
-    <h1>Calculadora de Salário</h1>
+    <h1>Calculadora Responsiva</h1>
     <div class="input-grid">
         <div class="input-item">
             <label for="salarioBase">Salário Base (R$)</label>
