Ajustando texto dos detalhes dos ganhos

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="detail-line"><span>(+) Total H.E. Noturnas 75%:</span><div class="value-block"><span id="resHENoturna"></span><br><span class="formula" id="formulaHENoturna"></span></div></div>
         <div class="detail-line"><span>(+) Total H.E. Noturnas 100%:</span><div class="value-block"><span id="resHENoturna100"></span><br><span class="formula" id="formulaHENoturna100"></span></div></div>
         <div class="detail-line"><span>(+) Total Sobreaviso:</span><div class="value-block"><span id="resSobreaviso"></span><br><span class="formula" id="formulaSobreaviso"></span></div></div>
-        <div class="detail-line"><span>(+) DSR (Exato):</span><div class="value-block"><span id="resDSR"></span><br><span class="formula" id="formulaDSR"></span></div></div>
+        <div class="detail-line"><span>(+) DSR S/ H.E.:</span><div class="value-block"><span id="resDSR"></span><br><span class="formula" id="formulaDSR"></span></div></div>
         
         <p class="section-title">Resumo Financeiro</p>
         <div class="result-line"><span>Salário Bruto Total:</span> <span id="resBruto"></span></div>
