Corrigindo calculo IRRF e INSS

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         
         <p class="section-title">Resumo Financeiro</p>
         <div class="result-line"><span>Salário Bruto Total:</span> <span id="resBruto"></span></div>
-        <div class="result-line"><span>(-) Desconto INSS:</span> <span id="resINSS"></span></div>
-        <div class="result-line"><span>(-) Desconto IRRF:</span> <span id="resIRRF"></span></div>
-        <div class="result-line result-final"><span>Salário Líquido Final:</span> <span id="resLiquido"></span></div>
+        <div class="detail-line"><span>(-) Desconto INSS:</span><div class="value-block"><span id="resINSS"></span><br><span class="formula" id="formulaINSS"></span></div></div>
+        <div class="detail-line"><span>(-) Desconto IRRF:</span><div class="value-block"><span id="resIRRF"></span><br><span class="formula" id="formulaIRRF"></span></div></div>
+        <div class="result-line result-final"><span>Valor Líquido:</span> <span id="resLiquido"></span></div>
     </div>
 </div>
 
