--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Salário</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        /* Estilo para deixar o select igual aos inputs do formulário */
+        .input-grid .input-item select,
+        .input-grid .input-item input[type="number"] {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 10px 12px;
+            font-size: 15px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            background: #fff;
+            color: #222;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+
+        /* manter ícone da seta visível sem quebrar o padding */
+        .input-grid .input-item select {
+            background-image: linear-gradient(45deg, transparent 50%, #666 50%),
+                              linear-gradient(135deg, #666 50%, transparent 50%),
+                              linear-gradient(to right, #ccc, #ccc);
+            background-position: calc(100% - 18px) calc(1em + 2px), calc(100% - 13px) calc(1em + 2px), 100% 0;
+            background-size: 6px 6px, 6px 6px, 1px 1.5em;
+            background-repeat: no-repeat;
+            padding-right: 36px; /* espaço para seta */
+        }
+    </style>
 </head>
 <body>
 
@@ -16,8 +44,13 @@
             <input type="number" id="salarioBase" placeholder="Ex: 4065">
         </div>
         <div class="input-item">
-            <label for="bonificacao">Bonificação (R$)</label>
-            <input type="number" id="bonificacao" placeholder="Ex: 2500">
+            <label for="bonificacao">Bonificação</label>
+            <select id="bonificacao">
+                <option value="0">Selecione (nenhuma)</option>
+                <option value="250">Practitioner</option>
+                <option value="1000">Associate</option>
+                <option value="2500">Professional/Specialty</option>
+            </select>
         </div>
         <div class="input-item">
             <label for="he75">
@@ -108,6 +141,7 @@
     </div>
 </div>
 
+<script src="js/calc-sunday.js"></script>
 <script src="js/calculator.js"></script>
 </body>
 </html>
