Adicionando url parameters

--- a/index.html
+++ b/index.html
@@ -143,5 +143,6 @@
 
 <script src="js/calc-sunday.js"></script>
 <script src="js/calculator.js"></script>
+<script src="js/url-share.js"></script>
 </body>
 </html>
